gospel/tests/negative/t23.mli.expected

*******************************
********** Parsed file ********
*******************************
val f : ('a -> 'b -> 'c) -> 'a -> 'b -> 'c[@@gospel  r = f x y ]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

val f : ('a -> 'b -> 'c) -> 'a -> 'b -> 'c
(*@ r  = f  x  y 
     *)
File "t23.mli", line 12, characters 8-9:
Error: Type checking error: too few parameters
